syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zupacademy.adriano";
option java_outer_classname = "PixKeymanagerGrpc";
option objc_class_prefix = "HLW";

package br.com.zupacademy.adriano;

service ChavePixGrpcService {
  rpc salvar (ChavePixRequest) returns (ChavePixResponse) {}
}

message ChavePixRequest {
  enum TipoDeChave {
    DESCONHECIDA = 0;
    CPF = 1;
    CELULAR = 2;
    EMAIL = 3;
    ALEATORIA = 4;
  }

  enum TipoDeConta {
    DESCONHECIDO = 0;
    CONTA_CORRENTE = 1;
    CONTA_POUPANCA = 2;
  }

  string clienteId = 1;
  TipoDeChave tipoDeChave = 2;
  TipoDeConta tipoDeConta = 3;
  string chavePix = 4;
}

message ChavePixResponse {
  int64 pixId = 1;
}